--- a/GeneralAdvice.html
+++ b/GeneralAdvice.html
@@ -2,7 +2,7 @@
 javascript: (function(){
 
   var  AdviceGive =  ['Take Your Time And Really Think Things Through', 'Stay True To Yourself', 'Sometimes You Have To Cut Toxic People In Your Life', 'It Is Okay To Be Emotional','Reach Out To Someone','Treat Yourself To Some Good Food', 'Love Yourself', 'Say How You Feel. Your Voice Matters', 'The World Is Not Out To Get You',
-  'Let People Enjoy Things', 'Remember Your Goals', 'It IS Always Good To Sit Back And Reflect', 'Deposit Some Money Into Your Savings. You will Thank Yourself Later.','Keep A Level Head', 'Try Not To Be Hasty'];
+  'Let People Enjoy Things', 'Remember Your Goals', 'It Is Always Good To Sit Back And Reflect', 'Deposit Some Money Into Your Savings. You Will Thank Yourself Later.','Keep A Level Head', 'Try Not To Be Hasty'];
 
   var show = AdviceGive[Math.floor(Math.random () * AdviceGive.length)];
 
